# NTNUCSIE-news

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  data.db-shm  data.db-wal  docker-compose.yml  main.py  pyproject.toml  scrape_to_json.py
cogs/: forum.py  scheduler.py
config/: config.py
data/: forum_config.json  post.json  posts.json
services/: news_processer.py  scrape_web.py
utils/: db_util.py  log_util.py
